fixed the spacing between menu links

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -67,7 +67,7 @@ h1 {
 /* Menu */
 #menu {
     font-size: 110%;
-    letter-spacing: 4px;
+    letter-spacing: 1.5px;
     list-style-type: none;
     font-weight: 400;
     font-size: 16px;
